# dissect.clfs

./: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dissect/clfs/: blf.py  c_clfs.py  container.py  exceptions.py
tests/: conftest.py  test_container.py  test_control_record.py  test_record_header.py  test_validate_blf.py
tests/_docs/: conf.py
tests/data/: bad_control_record.blf  control_record.blf  invalid_control_record.blf
